// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="Header-root-1"
>
  <header
    className="MuiPaper-root-18 MuiPaper-elevation4-24 MuiAppBar-root-9 MuiAppBar-positionFixed-10 MuiAppBar-colorPrimary-16 mui-fixed Header-appBar-2 Header-appBarShift-4 Header-appBarWithCookieInfo-3"
  >
    <div
      className="MuiToolbar-root-45 MuiToolbar-regular-47 MuiToolbar-gutters-46"
    >
      <button
        aria-label="open drawer"
        className="MuiButtonBase-root-55 MuiIconButton-root-49 MuiIconButton-colorInherit-50 Header-menuButton-5 Header-hide-6"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-54"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-58"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-103"
        />
      </button>
      <h6
        className="MuiTypography-root-67 MuiTypography-h6-84 MuiTypography-colorInherit-96 Header-flex-7 Header-title-8"
        onClick={[Function]}
      >
        Header
      </h6>
    </div>
  </header>
</div>
`;

exports[`renders correctly with closed 1`] = `
<div
  className="Header-root-1"
>
  <header
    className="MuiPaper-root-18 MuiPaper-elevation4-24 MuiAppBar-root-9 MuiAppBar-positionStatic-13 MuiAppBar-colorPrimary-16 Header-appBar-2"
  >
    <div
      className="MuiToolbar-root-45 MuiToolbar-regular-47 MuiToolbar-gutters-46"
    >
      <button
        aria-label="open drawer"
        className="MuiButtonBase-root-55 MuiIconButton-root-49 MuiIconButton-colorInherit-50 Header-menuButton-5"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-54"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-58"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-103"
        />
      </button>
      <h6
        className="MuiTypography-root-67 MuiTypography-h6-84 MuiTypography-colorInherit-96 Header-flex-7 Header-title-8"
        onClick={[Function]}
      >
        Header
      </h6>
    </div>
  </header>
</div>
`;
